# super-video-downloader

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENCE  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  versions.gradle
.github/workflows/: android.yml
GO_PROXY/myproxy/: README  go.sum  proxy.go
GO_PROXY/proxy/: go.mod  proxy.go
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/libs/: libv2ray.txt
app/schemas/com.allVideoDownloaderXmaster.data.local.room.AppDatabase/: 1.json  3.json  4.json  5.json
app/schemas/com.myAllVideoBrowser.data.local.room.AppDatabase/: 4.json  5.json
app/schemas/com.myAllVideoDownloader.data.local.room.AppDatabase/: 1.json  2.json
app/src/androidTest/java/util/: RecyclerViewMatcher.kt  RecyclerViewUtil.kt  TestApplication.kt  TestHelperActivity.kt  TestRunner.kt  TestUtil.kt  ViewModelUtil.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: adi-registration.properties  easyprivacylist.txt  sites.txt
app/src/main/assets/web-extension/: background.js  (+1 more)
app/src/main/cpp/: CMakeLists.txt  proxychain_jni.c
fastlane/metadata/android/ar/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/id/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ko-KR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/pl-PL/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/pt-BR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/tr-TR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
go/: go.mod  go.sum  proxychain.go  proxychain_build.sh
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust_adblock/: Cargo.toml  rust-toolchain.toml
rust_adblock/src/: lib.rs
(+432 files in other folders)
